fix vertical align of pod social links

--- a/assets/src/css/podcasts/_single.scss
+++ b/assets/src/css/podcasts/_single.scss
@@ -247,6 +247,7 @@
 			li {
 				display: inline-block;
 				margin-right: 1em;
+				vertical-align: top;
 			}
 
 			a {
